--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -3,6 +3,7 @@
 @charset "UTF-8";
 
 @import
+    'modules/_reset',
     'modules/_functions',
     'modules/_settings',
     'modules/_grid',
@@ -12,4 +13,5 @@
     'modules/_buttons',
     'modules/_form',
     'modules/_media',
-    'modules/_state';
+    'modules/_state',
+    'modules/_alerts';
